force-app/main/default/objects/DA_Network_Response__b/DA_Network_Response__b.object-meta.xml
<CustomObject>
    <label>DA Network Response</label>
    <pluralLabel>DA Network Response</pluralLabel>
</CustomObject>