force-app/main/default/objects/DA_Network_Response__b/fields/Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Comments__c</fullName>
    <label>Agent Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>