force-app/main/default/objects/DA_Network_Response__b/fields/Send_Case_To_Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Send_Case_To_Customer_Service__c</fullName>
    <label>Send Case To Customer Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>